vcs/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vcs.anagno.dev
  namespace: vcs
  annotations:
    external-dns.kubernetes.io/hostname: vcs.anagno.dev
    external-dns.kubernetes.io/target: zh.anagno.dev
    kubernetes.io/ingressClassName: traefik  
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vcs.anagno.dev`)
      kind: Rule
      services:
        - name: vcs-gitea-http
          port: 3000
      middlewares:
      - name: https-redirect
        namespace: proxy
      - name: security-headers
        namespace: proxy
  tls:
    secretName: vcs-anagno-dev-cert
    options:
      name: tls-security-headers
      namespace: proxy
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vcs.anagno.dev-http
  namespace: vcs
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vcs.anagno.dev`)
      kind: Rule
      services:
        - name: vcs-gitea-http
          port: 3000
      middlewares:
      - name: https-redirect
        namespace: proxy
